--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,30 @@
 .hello {
     color: red;
   }
+
+  .nav {
+    background-color: blue;
+    height: 50px;
+    width: 100%;
+  }
+
+  html, body, #content{
+    height: 100%;
+}
+
+body{
+  padding: 0%;
+  margin: 0px;
+  background-color: #ff1001;
+}
+
+#background{
+  display: flex;
+  position: absolute;
+  top:0px;
+  left:0px;
+  width: 100%;
+  height: 100%;
+
+  background-size: cover;
+}
