--- a/src/style/navBar.css
+++ b/src/style/navBar.css
@@ -1,7 +1,7 @@
 #container {
     height: auto;
     width: 100%;
-    background-color: #979696;
+    background: linear-gradient(184deg, rgb(0, 0, 0) 0.00%, rgb(217, 103, 93) 100.00%);
     
     
     padding: 1px 0px 2px 0px;
@@ -16,11 +16,11 @@
   li{
     list-style: none;
     display: inline-block;
-    color: #212121;
+    color: #ff6161;
     text-decoration: none;
     font-family: Monospace;
     font-size: 17px;
-    font-weight: 500;
+    font-weight: 700;
     letter-spacing: 6px;
     text-transform: uppercase;
   }
