--- a/src/style.css
+++ b/src/style.css
@@ -26,3 +26,16 @@ body{
   min-height: 100%;
   z-index: -1;
 }
+
+.display{
+  height: auto;
+  width: auto;
+  max-width: 70%;
+  min-width: 40%;
+  
+  justify-content: center;
+  
+  
+  background-image: linear-gradient(to bottom, rgba(255,255,255,0), rgb(80, 10, 3) 90%);
+  
+}
