--- a/src/style/home.css
+++ b/src/style/home.css
@@ -6,21 +6,22 @@
     justify-items: center;
 }
 
-.display{
-    height: 50vh;
-    width: 80%;
-    
-    justify-content: center;
-    opacity: 85%;
-    
-    background-image: linear-gradient(to bottom, rgba(255,255,255,0), rgb(80, 10, 3) 90%);
-    
-}
+
 
 .headers{
-    margin: 20px 0px 0px 0px;
+    margin: 40px 0px 40px 0px;
     text-align: center;
     font-family: monospace;
     font-weight: 500;
     color: white;
+}
+
+.burger{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 20px;
+    width: 95%;
+    
+
 }
