--- a/src/style/navBar.css
+++ b/src/style/navBar.css
@@ -1,19 +1,23 @@
+
 #container {
+
     height: auto;
     width: 100%;
-    background: linear-gradient(184deg, rgb(0, 0, 0) 0.00%, rgb(217, 103, 93) 100.00%);
+    background: linear-gradient(184deg, rgb(0, 0, 0) 0.00%, rgb(255, 55, 36) 100.00%);
     
     
     padding: 1px 0px 2px 0px;
     
+    
   }
   
-  ul{
+  .listContainer{
     display: flex;
     justify-content: space-around;
+    
   }
   
-  li{
+  .lists{
     list-style: none;
     display: inline-block;
     color: #ff6161;
@@ -25,6 +29,6 @@
     text-transform: uppercase;
   }
   
-  li:hover{
+  .lists:hover{
     color: white;
   }
