--- a/src/style.css
+++ b/src/style.css
@@ -29,10 +29,10 @@ body{
 
 .display{
   height: auto;
-  width: auto;
-  max-width: 70%;
-  min-width: 40%;
+  width: inherit;
   
+  min-width: 40%;
+  max-width: 95vh;
   justify-content: center;
   justify-items: center;
   text-align: center;
@@ -40,4 +40,12 @@ body{
   
   background-image: linear-gradient(to bottom, rgba(255,255,255,0), rgb(80, 10, 3) 90%);
   
+}
+@media only screen 
+and (min-device-width : 414px) 
+and (max-device-width : 736px) 
+and (orientation : portrait) {
+  html{
+    font-size: xx-large;
+  }
 }
