--- a/src/style/home.css
+++ b/src/style/home.css
@@ -13,7 +13,9 @@
     text-align: center;
     font-family: monospace;
     font-weight: 500;
+    font-size: xx-large;
     color: white;
+    text-shadow: 0 0 6px #FF0000, 0 0 10px #ff6d6d;
 }
 
 .burger{
@@ -21,7 +23,23 @@
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 20px;
-    width: 95%;
+    max-width: 75%;
+    border-radius: 25px;
     
 
+}
+
+.about{
+    padding-top: 5vh;
+    padding-bottom: 5vh;
+    text-align: center;
+    justify-content: center;
+    display: flex;
+    text-decoration: none;
+    font-family: Monospace;
+    color: white;
+    margin-left: 12%;
+    margin-right: 12%;
+    font-size: x-large;
+    text-shadow: 0 0 6px #FF0000, 0 0 10px #ff6d6d;
 }
