--- a/src/style/navBar.css
+++ b/src/style/navBar.css
@@ -23,7 +23,7 @@
     color: #ff6161;
     text-decoration: none;
     font-family: Monospace;
-    font-size: 17px;
+    font-size: xxx-large;
     font-weight: 700;
     letter-spacing: 6px;
     text-transform: uppercase;
@@ -31,4 +31,5 @@
   
   .lists:hover{
     color: white;
+    text-shadow: 0 0 6px #FF0000, 0 0 10px #ff6d6d;
   }
